[gd_scene load_steps=4 format=3 uid="uid://gifj0kxdt4vb"]

[ext_resource type="Script" path="res://player/UI/game_screen.gd" id="1_5ur4s"]
[ext_resource type="PackedScene" uid="uid://c4ln681khhs8f" path="res://player/Health_bar/health_bar.tscn" id="1_8tkul"]
[ext_resource type="PackedScene" uid="uid://qrkftk0g363e" path="res://Collectibles/coin/coin_icon.tscn" id="3_ar3rk"]

[node name="GameScreen" type="CanvasLayer"]
layer = 0
offset = Vector2(10, 10)
transform = Transform2D(1, 0, 0, 1, 10, 10)
script = ExtResource("1_5ur4s")

[node name="HealthBar" parent="." instance=ExtResource("1_8tkul")]
position = Vector2(10, 900)

[node name="CoinIcon" parent="." instance=ExtResource("3_ar3rk")]
position = Vector2(40, 1050)
scale = Vector2(3, 3)

[node name="Label" type="Label" parent="CoinIcon"]
offset_left = 13.0
offset_top = -13.6667
offset_right = 53.0
offset_bottom = 9.33333
text = "0
"
